# tiny-lm

./: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  IMPROVEMENTS.md  Modelfile  TRAINING_PROFILES.md  chainlit.md  pyproject.toml
.agent/workflows/: python-commands.md
configs/data/: tinystories-8k-speed.yaml
configs/models/: gpt2-8k-2l-speed.yaml
configs/training/: gpt2-8k-speed.yaml
exports/hf-gpt2-speed/: config.json  generation_config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
robo-micropython-lm/: ARCHITECTURE.md  BUILD_AND_DEPLOY.md  DATA_REQUIREMENTS.md  GLOSSARY.md  PARAMETER_REFERENCE.md  TRAINING_GUIDE.md  TUTORIAL.md
scripts/demo/: chainlit_app.py
scripts/export/: convert_to_gguf_direct.py  convert_to_hf_gpt2.py  create_hf_tokenizer.py
scripts/inference/: generate_from_ckpt.py
scripts/training/: train_gpt2.py
tiny_lm/model/attention/: multi_head.py
